--- a/index.html
+++ b/index.html
@@ -67,7 +67,16 @@
                     name="coupon"
                     ng-model="ctrl.coupon"
                     required="required" />
-            <span class="coupon">{{ ctrl.coupon }}</span>
+
+                <div ng-messages="form.coupon.$error">
+                  <div ng-message="couponCode">
+                    Coupon code is incorrect!
+                   </div>
+                </div>
+
+                <span class="coupon">{{ ctrl.coupon }}</span>
+
+
         </form>
     </div>
 
