--- a/index.html
+++ b/index.html
@@ -62,12 +62,16 @@
                 <label>Coupon Code</label>
 
                 <input
-                    make-lower
-                    coupon-code
                     name="coupon"
                     ng-model="ctrl.coupon"
-                    required="required" />
-            <span class="coupon">{{ ctrl.coupon }}</span>
+                    required="required"
+                    make-lower
+                    coupon-code />
+                <div ng-messages="form.coupon.$error" ng-show="form.coupon.$error.couponCode">
+                  <div ng-message="couponCode">incorrect coupon code</div>
+                </div>
+
+            <span class="coupon" >{{ ctrl.coupon  }}</span>
         </form>
     </div>
 
