--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@
                     coupon-code
                     name="coupon"
                     ng-model="ctrl.coupon"
-                    required="required" />
+                    required="required"
+                    couponCode
+                    make-lower />
+                <div ng-messages="form.coupon.$error" ng-if="form.coupon.$dirty">
+                  <div ng-message='coupon'>This code is incorrect</div>
+                </div>
             <span class="coupon">{{ ctrl.coupon }}</span>
         </form>
     </div>
