--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
                     name="coupon"
                     ng-model="ctrl.coupon"
                     required="required" />
+                
+<!--   this is the given solution
+                <div ng-show="form.coupon.$error.coupon">
+                  Coupon code is incorrect!
+                </div> 
+-->
+                <div ng-messages="form.coupon.$errors" ng-if="form.coupon.$touched">
+                  <div ng-message="coupon">Coupon code is incorrect!</div>
+                </div>
+
             <span class="coupon">{{ ctrl.coupon }}</span>
         </form>
     </div>
