--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <label>Name</label>
 
                 <input
+                    make-lower
                     name="name"
                     minlength="2"
                     ng-model="ctrl.name"
