fixed component form validation

--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
             <h5>Register</h5>
 
             <form name="form">
+
+              <label>Company</label>
+
+              <input name="company" ng-model="ctrl.company"/>
+
+              {{ ctrl.company }}
+
+              <br />
+
+
+
                 <label>Name</label>
 
                 <input
