--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                     name="coupon"
                     ng-model="ctrl.coupon"
                     required="required" />
+            <div ng-show="form.coupon.$error.coupon">
+              Coupon is incorrect!
+            </div>
             <span class="coupon">{{ ctrl.coupon }}</span>
         </form>
     </div>
