--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                   ng-model="ctrl.coupon"
                   required="required" />
 
-              <div ng-show="form.coupon.$error.coupon">
+              <div ng-show="form.coupon.$error.couponCode">
                   Coupon code is incorrect!
               </div>
 
