--- a/index.html
+++ b/index.html
@@ -62,11 +62,14 @@
                 <label>Coupon Code</label>
 
                 <input
-                    make-lower
                     coupon-code
+                    make-lower
                     name="coupon"
                     ng-model="ctrl.coupon"
                     required="required" />
+                <div ng-show="form.coupon.$error.coupon">
+                    Coupon code is incorrect!
+                </div>
             <span class="coupon">{{ ctrl.coupon }}</span>
         </form>
     </div>
