--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
                     name="coupon"
                     ng-model="ctrl.coupon"
                     required="required" />
+
+                <div ng-show="form.coupon.$error.coupon">
+                  Coupon code incorrect!!
+                </div>
+
             <span class="coupon">{{ ctrl.coupon }}</span>
         </form>
     </div>
