--- a/index.html
+++ b/index.html
@@ -54,11 +54,6 @@
                     ng-model="ctrl.name"
                     required="required" />
 
-                <div ng-if="form.name.$touched" ng-messages="form.name.$error">
-                    <div ng-message="required">name is required</div>
-                    <div ng-message="minlength">more than 2 characters required</div>
-                </div>
-
                 <span ng-bind="ctrl.name"></span>
 
                 <br />
@@ -66,17 +61,12 @@
                 <label>Coupon Code</label>
                 <input
                     make-lower
-                    couponCode
+                    coupon-code
                     name="coupon"
                     ng-model="ctrl.coupon"
                     required="required" />
-
-                <!-- <div ng-show="form.coupon.$error.required">coupon code required</div>
-                <div ng-show="form.coupon.$error.couponCode">2 digit, 4 alpha, 2 digit format required</div> -->
-
-                <div ng-if="form.coupon.$touched" ng-messages="form.coupon.$error">
-                    <div ng-message="required">coupon code required</div>
-                    <div ng-message="couponCode">2 digit, 4 alpha, 2 digit format required</div>
+                <div ng-show="form.coupon.$error.coupon">
+                    incorrect format
                 </div>
 
                 <span class="coupon" ng-bind="ctrl.coupon"></span>
