--- a/index.html
+++ b/index.html
@@ -55,9 +55,14 @@
                     ng-model="ctrl.name"
                     required="required" />
 
-                {{ ctrl.name }}
+                <div ng-if="form.name.$touched">
+                  <div ng-messages="form.name.$error">
+                    <div ng-message="required">Name is required</div>
+                    <div ng-message="minlength">Minimum length is 2 characters</div>
+                  </div>
+                </div>
 
-                <br />
+                <br/>
 
                 <label>Coupon Code</label>
 
@@ -67,7 +72,12 @@
                     name="coupon"
                     ng-model="ctrl.coupon"
                     required="required" />
-            <span class="coupon">{{ ctrl.coupon }}</span>
+
+                  <div ng-messages="form.coupon.$error">
+                    <div ng-message="coupon">incorrect - Coupon should be two digits, then 4 characters, then 2 digits</div>
+                  </div>
+
+              <span class="coupon">{{ ctrl.coupon }}</span>
         </form>
     </div>
 
