--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
                     name="coupon"
                     ng-model="ctrl.coupon"
                     required="required" />
+                
+                <div ng-messages="form.coupon.$error">
+                    <div ng-message="coupon">Coupon code is incorrect. It must be two digits, then 4 characters, then 2 digits.</div>
+                </div>
             <span class="coupon">{{ ctrl.coupon }}</span>
         </form>
     </div>
