--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
                   name="coupon"
                   ng-model="ctrl.coupon"
                   required="required" >
-              <div ng-messages="form.coupon.$error.coupon" ng-if="form.coupon.$touched">incorrect</div>
+              <div ng-show="form.coupon.$error.coupon">
+                Coupon code is incorrect!
+              </div>
             <span class="coupon">{{ ctrl.coupon }}</span>
         </form>
       </div>
