--- a/index.html
+++ b/index.html
@@ -1,82 +1,93 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8">
+  <meta charset="utf-8">
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Angular Application</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Angular Application</title>
 
-    <style>
-        body {
-            font-family: "Helvetica Neue", Verdana, sans-serif;
-        }
+  <style>
+  body {
+    font-family: "Helvetica Neue", Verdana, sans-serif;
+  }
 
-        table {
-            border-collapse: collapse;
-            width: 100%;
-            border: 1px solid rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-            margin: 50px 0;
-        }
+  table {
+    border-collapse: collapse;
+    width: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    margin: 50px 0;
+  }
 
-        input {
-            font-size: 16px;
-            padding: 5px 7px;
-            border: 1px solid rgba(0, 0, 0, 0.1);
-            border-radius: 3px;
-        }
-        thead {
-            background: rgba(0, 0, 0, 0.05);
-            border-bottom: 2px solid rgba(0, 0, 0, 0.1);
-            color: rgba(0, 0, 0, 0.8);
-        }
+  input {
+    font-size: 16px;
+    padding: 5px 7px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 3px;
+  }
+  thead {
+    background: rgba(0, 0, 0, 0.05);
+    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+    color: rgba(0, 0, 0, 0.8);
+  }
 
-        tr:not(:last-of-type) {
-            border-bottom: 1px solid map-get($border-color, light);
-        }
+  tr:not(:last-of-type) {
+    border-bottom: 1px solid map-get($border-color, light);
+  }
 
-        td {
-            padding: 16px 12px 14px;
-        }
-    </style>
+  td {
+    padding: 16px 12px 14px;
+  }
+  </style>
 </head>
 <body>
 
-    <div ng-app="app" class="app">
-        <div ng-controller="FormController as ctrl">
-            <h5>Register</h5>
+  <div ng-app="app" class="app">
+    <div ng-controller="FormController as ctrl">
+      <h5>Register</h5>
 
-            <form name="form">
-                <label>Name</label>
+      <form name="form">
+        <label>Name</label>
 
-                <input
-                    name="name"
-                    minlength="2"
-                    ng-model="ctrl.name"
-                    required="required" />
+        <input
+        name="name"
+        minlength="2"
+        ng-model="ctrl.name"
+        required="required"/>
 
-                {{ ctrl.name }}
+        {{ ctrl.name }}
 
-                <br />
+        <br />
 
-                <label>Coupon Code</label>
+        <label>Coupon Code</label>
 
-                <input
-                    make-lower
-                    coupon-code
-                    name="coupon"
-                    ng-model="ctrl.coupon"
-                    required="required" />
-            <span class="coupon">{{ ctrl.coupon }}</span>
-        </form>
-    </div>
+        <input
+        make-lower
+        coupon-code
+        name="coupon"
+        ng-model="ctrl.coupon"
+        required="required"/>
+        <div class="">
+          <div ng-messages="form.coupon.$errors" ng-if="form.coupon.$invalid && form.coupon.$dirty">
+            <div ng-message="coupon-code">
+              Coupon code is incorrect!
+            </div>
+          </div>
+        </div>
 
-    <script src="js/angular.js"></script>
-    <script src="js/angular-messages.js"></script>
-    <script src="js/app/app.js"></script>
-    <script src="js/app/controllers/FormController.js"></script>
-    <script src="js/app/directives/makeLower.js"></script>
-    <script src="js/app/directives/couponCode.js"></script>
+        <span class="coupon">{{ ctrl.coupon }}</span>
+
+
+
+    </form>
+  </div>
+
+  <script src="js/angular.js"></script>
+  <script src="js/angular-messages.js"></script>
+  <script src="js/app/app.js"></script>
+  <script src="js/app/controllers/FormController.js"></script>
+  <script src="js/app/directives/makeLower.js"></script>
+  <script src="js/app/directives/couponCode.js"></script>
 
 </body>
 </html>
