--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="utf-8">
 
@@ -25,6 +26,7 @@
             border: 1px solid rgba(0, 0, 0, 0.1);
             border-radius: 3px;
         }
+
         thead {
             background: rgba(0, 0, 0, 0.05);
             border-bottom: 2px solid rgba(0, 0, 0, 0.1);
@@ -40,6 +42,7 @@
         }
     </style>
 </head>
+
 <body>
 
     <div ng-app="app" class="app">
@@ -49,34 +52,28 @@
             <form name="form">
                 <label>Name</label>
 
-                <input
-                    name="name"
-                    minlength="2"
-                    ng-model="ctrl.name"
-                    required="required" />
-
-                {{ ctrl.name }}
+                <input name="name" minlength="2" ng-model="ctrl.name" required="required" /> {{ ctrl.name }}
 
                 <br />
 
                 <label>Coupon Code</label>
 
-                <input
-                    make-lower
-                    coupon-code
-                    name="coupon"
-                    ng-model="ctrl.coupon"
-                    required="required" />
-            <span class="coupon">{{ ctrl.coupon }}</span>
-        </form>
-    </div>
+                <input make-lower coupon-code name="coupon" ng-model="ctrl.coupon" required="required" />
 
-    <script src="js/angular.js"></script>
-    <script src="js/angular-messages.js"></script>
-    <script src="js/app/app.js"></script>
-    <script src="js/app/controllers/FormController.js"></script>
-    <script src="js/app/directives/makeLower.js"></script>
-    <script src="js/app/directives/couponCode.js"></script>
+                <div ng-messages="form.coupon.$error">
+                    <div ng-message="coupon"> Coupon is incorrect!</div>
+                </div>
+                <span class="coupon">{{ ctrl.coupon }}</span>
+            </form>
+        </div>
+
+        <script src="js/angular.js"></script>
+        <script src="js/angular-messages.js"></script>
+        <script src="js/app/app.js"></script>
+        <script src="js/app/controllers/FormController.js"></script>
+        <script src="js/app/directives/makeLower.js"></script>
+        <script src="js/app/directives/couponCode.js"></script>
 
 </body>
+
 </html>
