--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
                     name="coupon"
                     ng-model="ctrl.coupon"
                     required="required" />
+
+            <div ng-show="form.coupon.$error.coupon">
+                Coupon code is incorrect
+            </div>
+
+
+            <!--<div ng-messages="form.coupon.$error" ng-if="form.coupon.$touched">
+              <div ng-message="coupon">Wrong coupon format!</div>
+            </div>-->
+
             <span class="coupon">{{ ctrl.coupon }}</span>
         </form>
     </div>
