--- a/index.html
+++ b/index.html
@@ -67,12 +67,19 @@
                     name="coupon"
                     ng-model="ctrl.coupon"
                     required="required" />
+                <div>
+                <div ng-If="form.coupon.$error.coupon">
+                    Coupon code is incorrect!
+                </div>
+                </div>
+   
+
             <span class="coupon">{{ ctrl.coupon }}</span>
         </form>
     </div>
 
     <script src="js/angular.js"></script>
-    <script src="js/angular-messages.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.1/angular-messages.min.js"></script>
     <script src="js/app/app.js"></script>
     <script src="js/app/controllers/FormController.js"></script>
     <script src="js/app/directives/makeLower.js"></script>
